--- a/Hibernate/part2/GS_Hibernate_Version_Check/pom.xml
+++ b/Hibernate/part2/GS_Hibernate_Version_Check/pom.xml
@@ -8,10 +8,27 @@
 	<packaging>jar</packaging>
 
 	<url>http://maven.apache.org</url>
-
-	
-
-	<dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
 
 
         <dependency>
@@ -48,4 +65,7 @@
 
 
     </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
