--- a/Hibernate/part1/GS_Hibernate_ManyToOne/pom.xml
+++ b/Hibernate/part1/GS_Hibernate_ManyToOne/pom.xml
@@ -45,9 +45,9 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.25</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1102-jdbc41</version>
         </dependency>
     </dependencies>
     <properties>
