--- a/EJB/ejb-pom-module/ejb-war-module/pom.xml
+++ b/EJB/ejb-pom-module/ejb-war-module/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <name>EJB ejb-war-module</name>
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
