--- a/EJB/ejb-pom-module/ejb-ear-module/pom.xml
+++ b/EJB/ejb-pom-module/ejb-ear-module/pom.xml
@@ -7,6 +7,8 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>ear</packaging>
 
+    <name>EJB ejb-ear-module</name>
+
     <dependencies>
         <dependency>
             <groupId>edu.javacourse.ejb</groupId>
