--- a/EJB/ejb-pom-module/pom.xml
+++ b/EJB/ejb-pom-module/pom.xml
@@ -7,6 +7,8 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+    <name>EJB ejb-pom-module</name>
+
 	<modules>
 		<module>ejb-ear-module</module>
 		<module>ejb-war-module</module>
