--- a/EJB/pom.xml
+++ b/EJB/pom.xml
@@ -2,10 +2,12 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>edu.javacourse.ejb</groupId>
-	<artifactId>integration</artifactId>
+	<groupId>edu.javacourse</groupId>
+	<artifactId>ejb</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
+    <name>EJB</name>
 
 	<modules>
 		<module>ejb-pom-module</module>
