--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<modules>
         <module>Dojo</module>
 		<module>EJB</module>
+		<module>Hibernate</module>
         <module>Logging</module>
 	</modules>
 
@@ -42,6 +43,17 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>4.3.6.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.persistence</groupId>
+                <artifactId>persistence-api</artifactId>
+                <version>1.0.2</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.12.1.GA</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
