--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Java -->
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-web-api</artifactId>
@@ -40,6 +41,8 @@
                 <version>1.2</version>
                 <scope>provided</scope>
             </dependency>
+
+            <!-- Databases -->
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
@@ -61,6 +64,8 @@
                 <artifactId>javassist</artifactId>
                 <version>3.12.1.GA</version>
             </dependency>
+
+            <!-- Logging -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
