--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 
     <properties>
         <maven.test.skip>true</maven.test.skip>
+        <source-code.version>1.7</source-code.version>
+        <source-code.encoding>UTF-8</source-code.encoding>
+        <ee.version>7.0</ee.version>
+        <slf4j.version>1.7.7</slf4j.version>
     </properties>
 
     <dependencyManagement>
@@ -26,13 +30,13 @@
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-web-api</artifactId>
-                <version>7.0</version>
+                <version>${ee.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
-                <version>7.0</version>
+                <version>${ee.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -69,12 +73,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.7</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.7</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
@@ -92,9 +96,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${source-code.version}</source>
+                    <target>${source-code.version}</target>
+                    <encoding>${source-code.encoding}</encoding>
                 </configuration>
             </plugin>
             <plugin>
@@ -110,7 +114,7 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${source-code.encoding}</encoding>
                 </configuration>
             </plugin>
         </plugins>
