--- a/EJB/ejb-pom-module/ejb-war-module/pom.xml
+++ b/EJB/ejb-pom-module/ejb-war-module/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>edu.javacourse.ejb</groupId>
+            <artifactId>ejb-lib-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
