--- a/EJB/ejb-pom-module/pom.xml
+++ b/EJB/ejb-pom-module/pom.xml
@@ -11,7 +11,10 @@
 
     <modules>
         <module>ejb-ear-module</module>
+        <module>ejb-ear2-module</module>
         <module>ejb-war-module</module>
+        <module>ejb-war2-module</module>
+        <module>ejb-lib-module</module>
     </modules>
 
 </project>
