--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>EJB</module>
 		<module>Hibernate</module>
         <module>Logging</module>
+        <module>MyBatis</module>
 	</modules>
 
     <properties>
@@ -56,6 +57,11 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>4.3.6.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>3.2.8</version>
             </dependency>
             <dependency>
                 <groupId>javax.persistence</groupId>
@@ -103,6 +109,14 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ear-plugin</artifactId>
+                <version>2.9.1</version>
+                <configuration>
+                    <version>6</version>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
@@ -113,7 +127,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ejb-plugin</artifactId>
                 <configuration>
-                    <ejbVersion>3.1</ejbVersion>
+                    <ejbVersion>3.0</ejbVersion>
                 </configuration>
             </plugin>
             <plugin>
