--- a/Struts/Struts2ExampleN03-web/src/main/webapp/WEB-INF/jdbc.properties
+++ b/Struts/Struts2ExampleN03-web/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/bank
-hibernate.connection.username=root
-hibernate.connection.password=root
+hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+hibernate.connection.driver_class=org.postgresql.Driver
+hibernate.connection.url=jdbc:postgresql://localhost:5432/bank
+hibernate.connection.username=postgres
+hibernate.connection.password=postgres
