--- a/WebServices/WEB-REST/RESTExample/pom.xml
+++ b/WebServices/WEB-REST/RESTExample/pom.xml
@@ -14,7 +14,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>RESTExample</name>
+    <name>WebServices RESTExample</name>
 
     <dependencies>
         <dependency>
