--- a/WebServices/JAX_WS/SimpleWebService/SimpleWebService-ear/pom.xml
+++ b/WebServices/JAX_WS/SimpleWebService/SimpleWebService-ear/pom.xml
@@ -2,49 +2,24 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>SimpleWebService</artifactId>
-        <groupId>ru.gs.test</groupId>
+        <groupId>edu.javacourse</groupId>
+        <artifactId>examples</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../../../</relativePath>
     </parent>
 
-    <groupId>ru.gs.test</groupId>
+    <groupId>edu.javacourse.web-services</groupId>
     <artifactId>SimpleWebService-ear</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
-    <name>SimpleWebService-ear</name>
+    <name>WebServices SimpleWebService-ear</name>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ear-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <version>6</version>
-                    <defaultLibBundleDir>lib</defaultLibBundleDir>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
-            <groupId>ru.gs.test</groupId>
+            <groupId>edu.javacourse.web-services</groupId>
             <artifactId>SimpleWebService-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
