--- a/WebServices/JAX_WS/SimpleWebService/pom.xml
+++ b/WebServices/JAX_WS/SimpleWebService/pom.xml
@@ -2,13 +2,25 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ru.gs.test</groupId>
+
+    <parent>
+        <groupId>edu.javacourse</groupId>
+        <artifactId>examples</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../../../</relativePath>
+    </parent>
+
+    <groupId>edu.javacourse.web-services</groupId>
     <artifactId>SimpleWebService</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>SimpleWebService</name>
+
+    <name>WebServices SimpleWebService</name>
+
     <modules>
         <module>SimpleWebService-ear</module>
         <module>SimpleWebService-ejb</module>
+        <module>SimpleWebService-client</module>
     </modules>
+
 </project>
