--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,8 @@
                 <artifactId>maven-ear-plugin</artifactId>
                 <version>2.9.1</version>
                 <configuration>
-                    <version>6</version>
+                    <version>7</version>
+                    <defaultLibBundleDir>lib</defaultLibBundleDir>
                 </configuration>
             </plugin>
             <plugin>
