--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <name>JavaCourse EE Examples</name>
 
     <modules>
+        <module>DWR</module>
         <module>EJB</module>
         <module>Hibernate</module>
         <module>JQuery</module>
@@ -91,6 +92,11 @@
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>1.2.17</version>
@@ -106,6 +112,11 @@
                 <groupId>org.apache.struts</groupId>
                 <artifactId>struts2-spring-plugin</artifactId>
                 <version>2.3.16.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.directwebremoting</groupId>
+                <artifactId>dwr</artifactId>
+                <version>2.0.10</version>
             </dependency>
 
             <!-- Spring -->
