--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,16 @@
                 <artifactId>dwr</artifactId>
                 <version>2.0.10</version>
             </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-server</artifactId>
+                <version>7.3.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-client-compiled</artifactId>
+                <version>7.3.4</version>
+            </dependency>
 
             <!-- Spring -->
             <dependency>
