Security example moved to maven structure

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>JQuery</module>
         <module>Logging</module>
         <module>MyBatis</module>
+        <module>Security</module>
         <module>Struts</module>
         <module>Vaadin</module>
         <module>WebServices</module>
