--- a/Security/WebSecurity/src/main/webapp/WEB-INF/web.xml
+++ b/Security/WebSecurity/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <login-config>
         <auth-method>BASIC</auth-method>
-        <realm-name>fileRealm</realm-name>
+        <realm-name>ApplicationRealm</realm-name>
     </login-config>
     <security-role>
         <role-name>admin</role-name>
