--- a/Velocity/GS_Velocity_1/src/main/java/velocity.properties
+++ b/Velocity/GS_Velocity_1/src/main/java/velocity.properties
@@ -41,7 +41,7 @@ resource.loader = file
 
 # File Resource Loader
 file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
-file.resource.loader.path = ./src/main/java/templates
+file.resource.loader.path = Velocity/GS_Velocity_1/src/main/java/templates
 file.resource.loader.cache = true
 file.resource.loader.modificationCheckInterval = 2
 
