Authentication through LDAP project add

--- a/Security/pom.xml
+++ b/Security/pom.xml
@@ -13,6 +13,7 @@
         <module>ClientAuthentication</module>
         <module>WebSecurity</module>
         <module>WebSecurityForm</module>
+        <module>WebSecurityFormLDAP</module>
     </modules>
 
 </project>
