Add Spring Integration Filter sample

--- a/Spring/Integration/pom.xml
+++ b/Spring/Integration/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module></module>
         <module>spring-integration-01</module>
+        <module>spring-integration-02</module>
     </modules>
 
 </project>
