--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
                 <artifactId>spring-integration-core</artifactId>
                 <version>4.1.0.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-xmpp</artifactId>
+                <version>4.1.0.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
