Add remastered Hibernate Column Transformer example

--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -16,6 +16,7 @@
         <module>part1/hibernate-one-to-one</module>
         <module>part1/hibernate-criteria</module>
         <module>part1/hibernate-crud</module>
+        <module>part2/hibernate-column-transformer</module>
     </modules>
 
 </project>
