--- a/EJB/stateless-ejb-local-remote/ear-client/pom.xml
+++ b/EJB/stateless-ejb-local-remote/ear-client/pom.xml
@@ -9,18 +9,21 @@
         <relativePath>../../../</relativePath>
     </parent>
 
-    <groupId>edu.javacourse.ejb</groupId>
-    <artifactId>ejb-lib-module</artifactId>
+    <groupId>edu.javacourse.ejb.stateless-ejb-local-remote</groupId>
+    <artifactId>ear-client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>ear</packaging>
 
-    <name>EJB ejb-lib-module</name>
+    <name>EJB Stateless Local and Remote EAR Client</name>
 
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
+            <groupId>edu.javacourse.ejb.stateless-ejb-local-remote</groupId>
+            <artifactId>war-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
         </dependency>
     </dependencies>
+
 
 </project>
