--- a/EJB/stateless-ejb-local-remote/ear-ejb/pom.xml
+++ b/EJB/stateless-ejb-local-remote/ear-ejb/pom.xml
@@ -9,17 +9,17 @@
         <relativePath>../../../</relativePath>
     </parent>
 
-    <groupId>edu.javacourse.ejb</groupId>
-    <artifactId>ejb-ear-module</artifactId>
+    <groupId>edu.javacourse.ejb.stateless-ejb-local-remote</groupId>
+    <artifactId>ear-ejb</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
-    <name>EJB ejb-ear-module</name>
+    <name>EJB Stateless Local and Remote EAR EJB</name>
 
     <dependencies>
         <dependency>
-            <groupId>edu.javacourse.ejb</groupId>
-            <artifactId>ejb-war-module</artifactId>
+            <groupId>edu.javacourse.ejb.stateless-ejb-local-remote</groupId>
+            <artifactId>war-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
