--- a/EJB/jms/ear/pom.xml
+++ b/EJB/jms/ear/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -9,28 +10,27 @@
         <relativePath>../../../</relativePath>
     </parent>
 
-   <groupId>edu.javacourse.ejb</groupId>
-	<artifactId>ejb-jms-ear</artifactId>
-	<version>1.0-SNAPSHOT</version>
+    <groupId>edu.javacourse.ejb.jms</groupId>
+    <artifactId>ear</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
-    
-    <dependencies>
+    <name>EJB JMS EAR</name>
 
+    <dependencies>
         <dependency>
-			<groupId>edu.javacourse.ejb</groupId>
-			<artifactId>ejb-jms-ejb</artifactId>
+            <groupId>edu.javacourse.ejb.jms</groupId>
+            <artifactId>ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
         </dependency>
 
         <dependency>
-			<groupId>edu.javacourse.ejb</groupId>
-			<artifactId>ejb-jms-servlet</artifactId>
+            <groupId>edu.javacourse.ejb.jms</groupId>
+            <artifactId>war</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
-
     </dependencies>
 
 </project>
