--- a/EJB/jms/pom.xml
+++ b/EJB/jms/pom.xml
@@ -3,14 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.javacourse.ejb</groupId>
-	<artifactId>ejb-builder</artifactId>
+	<artifactId>jms</artifactId>
 	<version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <name>EJB JMS</name>
     
     <modules>
         <module>ejb</module>
-        <module>servlet</module>
+        <module>war</module>
         <module>ear</module>
     </modules>
 
