--- a/EJB/jms/war/pom.xml
+++ b/EJB/jms/war/pom.xml
@@ -12,10 +12,12 @@
         <relativePath>../../../</relativePath>
     </parent>
 
-    <groupId>edu.javacourse.ejb</groupId>
-	<artifactId>ejb-jms-servlet</artifactId>
+    <groupId>edu.javacourse.ejb.jms</groupId>
+    <artifactId>war</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+
+    <name>EJB JMS WAR</name>
 
     <dependencies>
         <dependency>
@@ -28,7 +30,6 @@
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
 
     </dependencies>
 
