Add topic to JMS example

--- a/EJB/jms/jms-ejb/pom.xml
+++ b/EJB/jms/jms-ejb/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>edu.javacourse.ejb.jms</groupId>
-    <artifactId>ejb</artifactId>
+    <artifactId>jms-ejb</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>ejb</packaging>
 
