--- a/EJB/jms/jms-ear/pom.xml
+++ b/EJB/jms/jms-ear/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>edu.javacourse.ejb.jms</groupId>
-    <artifactId>ear</artifactId>
+    <artifactId>jms-ear</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
@@ -20,14 +20,14 @@
     <dependencies>
         <dependency>
             <groupId>edu.javacourse.ejb.jms</groupId>
-            <artifactId>ejb</artifactId>
+            <artifactId>jms-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
         </dependency>
 
         <dependency>
             <groupId>edu.javacourse.ejb.jms</groupId>
-            <artifactId>war</artifactId>
+            <artifactId>jms-war</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
