--- a/EJB/jms/jms-war/pom.xml
+++ b/EJB/jms/jms-war/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>edu.javacourse.ejb.jms</groupId>
-    <artifactId>war</artifactId>
+    <artifactId>jms-war</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
