--- a/WebServices/WEB-REST/rest-context/pom.xml
+++ b/WebServices/WEB-REST/rest-context/pom.xml
@@ -10,11 +10,11 @@
     </parent>
 
     <groupId>edu.javacourse.web-services.rest</groupId>
-    <artifactId>rest-params-response</artifactId>
+    <artifactId>rest-context</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>WebServices REST Parameters and Responses</name>
+    <name>WebServices REST Context</name>
 
     <dependencies>
         <dependency>
@@ -22,8 +22,8 @@
             <artifactId>javaee-web-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
