--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,12 @@
                 <artifactId>vaadin-client-compiled</artifactId>
                 <version>7.3.4</version>
             </dependency>
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-jaxrs</artifactId>
+                <version>3.0.10.Final</version>
+                <scope>provided</scope>
+            </dependency>
 
             <!-- Spring -->
             <dependency>
