Move ZK example 02 to new API version

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
                 <version>${zk.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.zkoss.zk</groupId>
+                <artifactId>zhtml</artifactId>
+                <version>${zk.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-jaxrs</artifactId>
                 <version>3.0.10.Final</version>
