--- a/ZK/ZKExample02/pom.xml
+++ b/ZK/ZKExample02/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>zul</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.zkoss.zk</groupId>
+            <artifactId>zhtml</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
         </dependency>
