Add remastered String JDBCTemplate example

--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>Integration</module>
         <module>IoC</module>
+        <module>JDBC</module>
     </modules>
 
 </project>
