--- a/Camel/camel-activemq/pom.xml
+++ b/Camel/camel-activemq/pom.xml
@@ -10,11 +10,11 @@
     </parent>
 
     <groupId>edu.javacourse.camel</groupId>
-    <artifactId>spring-route</artifactId>
+    <artifactId>camel-activemq</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Camel Spring route</name>
+    <name>Camel ActiveMQ route</name>
 
     <dependencies>
         <dependency>
@@ -24,6 +24,10 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-camel</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
