--- a/Camel/dsl-route/pom.xml
+++ b/Camel/dsl-route/pom.xml
@@ -10,20 +10,16 @@
     </parent>
 
     <groupId>edu.javacourse.camel</groupId>
-    <artifactId>spring-route</artifactId>
+    <artifactId>dsl-route</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Camel Spring route</name>
+    <name>Camel DSL route</name>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-spring</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
