JDK 1.8 - web service bugfix

--- a/WebServices/JAX-WS/SimpleWebService/SimpleWebService-client/pom.xml
+++ b/WebServices/JAX-WS/SimpleWebService/SimpleWebService-client/pom.xml
@@ -35,6 +35,9 @@
                     <sourceDestDir>${project.build.directory}/generated-sources/jaxws-wsimport</sourceDestDir>
                     <xnocompile>true</xnocompile>
                     <verbose>true</verbose>
+                    <vmArgs>
+                        <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
+                    </vmArgs>
                     <extension>true</extension>
                     <wsdlFiles>
                         <wsdlFile>SimpleWebService.wsdl</wsdlFile>
