Impement Spring Web-Servie in war

--- a/Spring/WS/Spring-WS-Service/pom.xml
+++ b/Spring/WS/Spring-WS-Service/pom.xml
@@ -14,7 +14,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>Spring WS Client</name>
+    <name>Spring WS Service</name>
 
     <dependencies>
         <dependency>
@@ -26,6 +26,11 @@
             <artifactId>spring-ws-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>wsdl4j</groupId>
+            <artifactId>wsdl4j</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
@@ -34,5 +39,39 @@
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>xjc</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <arguments>-Xannotate</arguments>
+                    <bindingDirectory>src/main/bindings</bindingDirectory>
+                    <bindingFiles>binding.xml</bindingFiles>
+                    <schemaDirectory>src/main/webapp/WEB-INF</schemaDirectory>
+                    <schemaFiles>serviceSchema.xsd</schemaFiles>
+                    <extension>true</extension>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jvnet.jaxb2_commons</groupId>
+                        <artifactId>jaxb2-basics-annotate</artifactId>
+                        <version>0.6.4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
